--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
     "next": "14.2.13",
+    "postcss-import": "^16.1.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.79.3",
@@ -25,7 +31,7 @@
     "node-sass": "^9.0.0",
     "postcss": "^8.4.47",
     "sass-loader": "^16.0.2",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5"
   }
 }
