--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
-    "next": "14.2.13",
+    "browserslist": "^4.24.0",
+    "caniuse-lite": "^1.0.30001663",
+    "next": "^14.2.13",
     "postcss-import": "^16.1.0",
     "react": "^18",
     "react-dom": "^18",
