--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "caniuse-lite": "^1.0.30001663",
     "next": "^14.2.13",
     "postcss-import": "^16.1.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "sass": "^1.79.3",
     "vanilla-tilt": "^1.8.1"
@@ -28,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/vanilla-tilt": "^1.6.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "node-sass": "^9.0.0",
