--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "sass": "^1.79.3",
+    "three": "^0.169.0",
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.169.0",
     "@types/vanilla-tilt": "^1.6.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
