--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "sass": "^1.79.3",
+    "scrollreveal": "^4.0.9",
     "three": "^0.169.0",
     "vanilla-tilt": "^1.8.1"
   },
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@types/scrollreveal": "^0.0.11",
     "@types/three": "^0.169.0",
     "@types/vanilla-tilt": "^1.6.2",
     "eslint": "^8",
