--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "autoprefixer": "^10.4.20",
     "browserslist": "^4.24.0",
     "caniuse-lite": "^1.0.30001663",
+    "gsap": "^3.12.5",
     "next": "^14.2.14",
     "postcss-import": "^16.1.0",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "sass": "^1.79.4",
-    "scrollreveal": "^4.0.9",
     "three": "^0.169.0",
     "vanilla-tilt": "^1.8.1"
   },
