--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-swipeable": "^7.0.1",
     "sass": "^1.79.4",
     "three": "^0.169.0",
     "vanilla-tilt": "^1.8.1"
