--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "browserslist": "^4.24.0",
     "caniuse-lite": "^1.0.30001663",
     "gsap": "^3.12.5",
-    "next": "^14.2.14",
+    "next": "^15.0.3",
     "postcss-import": "^16.1.0",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
@@ -29,15 +29,15 @@
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/scrollreveal": "^0.0.11",
     "@types/three": "^0.169.0",
-    "@types/vanilla-tilt": "^1.6.2",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.13",
-    "node-sass": "^9.0.0",
+    "glob": "^10.3.10",
     "postcss": "^8.4.47",
     "sass-loader": "^16.0.2",
     "tailwindcss": "^3.4.13",
