--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.20",
     "browserslist": "^4.24.0",
     "caniuse-lite": "^1.0.30001663",
+    "embla-carousel-react": "^8.5.1",
     "gsap": "^3.12.5",
     "next": "^14.2.18",
     "postcss-import": "^16.1.0",
